--- a/style.css
+++ b/style.css
@@ -1,4 +1,214 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+:root {
+    font-size: 62.5%;
+}
+
+body {
+    font-family: "Inter", serif;
+    background: #F4F5FB;
+
+    padding: 5.0rem 3.15rem 0;
+    font-size: 1.6rem;
+}
+
+#logo {
+    display: none;
+}
+
+main {
+    max-width: 32.7rem;
+    margin: 0 auto;
+}
+
+a img {
+    margin-bottom: 2.0rem;
+}
+
+h1 {
+    font-weight: bold;
+    font-size: 2.4rem;
+    line-height: 3.2rem;
+
+    color: #080b12;
+
+    margin-bottom: 4.8rem;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+
+    gap: 1.8rem;
+}
+
+form input {
+    height: 4.4rem;
+    font-size: 1.6rem;
+
+    border: 2px solid #D1D5DB;
+    border-radius: 1.2rem;
+
+    padding: 1rem 1.6rem;
+}
+
+form input:hover{
+    border-color: #B9C2D0;
+}
+
+input[type="text"]:focus {
+    outline: none; /* Remove o contorno padrão */
+    border-color: #CA3884; /* Cor da borda ao focar */
+    box-shadow: 0 0 5px rgba(231, 99, 209, 0.5); /* Adiciona um brilho leve */
+}
+
+form button,
 footer {
-    min-height: 100px;
-    overflow: visible;
+    height: 4.4rem;
+
+    font-size: 1.6rem;
+    font-weight: 600;
+    color: #FFFFFF ;
+
+    border: none;
+    border-radius: 1.2rem;
+
+    background-color: #CA3884;
+
+    margin-bottom: 4.8rem;
+}
+
+form button:hover{
+    background-color: #A52C6B;
+    cursor: pointer;
+}
+
+li {
+    display: flex;
+    align-items: center;
+    height: 5.7rem;
+    padding: 1.2rem 1.6rem;
+
+    list-style: none;
+    background-color: #FFFFFF;
+    border-radius: 1.2rem;
+
+    margin-bottom: 1.8rem;
+
+    color: #374151;
+    font-size: 1.6rem;
+    font-weight: 600;
+    line-height: 20px;
+}
+
+li input,
+footer img {
+    margin-right: 1rem;
+}
+
+input[type="checkbox"] {
+    appearance: none; /* Remove o estilo padrão do checkbox */
+    width: 1.6rem;
+    height: 1.6rem;
+    border: 1px solid #D1D5DB;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+input[type="checkbox"]:hover {
+    border-color: #9ca4af;
+}
+
+input[type="checkbox"]:checked {
+    background-color: #CA3884;
+    border-color: #CA3884; 
+    background-image: url('./images/check.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+li button {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+
+    height: 2rem;
+
+    background-color: #FFFFFF;
+    border: none;
+    cursor: pointer;
+
+    transition: transform 0.3s ease;
+}
+
+li button:hover{
+    transform: scale(1.1);
+}
+
+footer {
+    display: flex;
+    align-items: center;
+
+    background-color: #C93847;
+
+    padding: 0 1.4rem;
+    margin-top: 4.8rem;
+}
+
+footer button {
+    width: 20px;
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+
+    background-color: #C93847;
+    border: none;
+    cursor: pointer;
+
+    transition: transform 0.3s ease;
+}
+
+footer button:hover {
+    transform: scale(1.1);
+}
+
+@media (min-width: 700px) {
+
+    body {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    #logo {
+        display: block;
+        height: 40px;
+        width: 155px;
+
+        margin-bottom: 7.2rem ;
+    }
+
+    main {
+        max-width: 627px;
+        width: 100%;
+    }
+
+    form {
+        display: flex;
+        flex-direction: row;
+    }
+
+    form input {
+        width: 72%;
+    }
+
+    form button {
+        width: 28%;
+    }
 }
